# mmm_c

./: CMakeLists.txt  README.md  otto.sh
inc/: mmm_c.h
src/: CMakeLists.txt  mmm_c.c  mmm_c.h
src/activation_funcs/: CMakeLists.txt  activation_funcs.c  activation_funcs.h
tests/: AllTests.cpp  CMakeLists.txt
tests/activation_funcs/: CMakeLists.txt  test_activation_funcs.cpp
tests/mmm_c_test/: CMakeLists.txt  mmm_c_test.cpp
